# ml_ops_project_1

./: README.md  pyproject.toml
.github/workflows/: ci-build.yaml
models/: preprocessor.pkl
src/features/: build_features.py
src/models/: predict_model.py  train_model.py
